# Devito-modelling

./: .gitignore  README.md  environment.yml  install_env.sh  pyproject.toml
devitomod/acoustic/: ac2d.py
devitomod/elastic/: el2d.py
notebooks/: Elastic2d.ipynb  PAcoustic2d.ipynb
scripts/: PAcoustic2d.py
