[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]

[project]
name = "devitomod"
authors = [
    {name = "Matteo Ravasi", email = "matteo.ravasi@kaust.edu.sa"},
]
description = "A collection of codes to perform all sort of seismic modeling with Devito."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["seismic", "modelling"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy",
        "matplotlib",
        "tqdm",
        "devito",
        "pytest"
    ]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}